feat: added soft deleted in cast and in resource, regenerated the openapi.json
