# openapi.json
@@ -49,7 +49,8 @@
                                     "email",
                                     "role",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -123,7 +124,8 @@
                                     "email",
                                     "role",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -213,7 +215,8 @@
                                     "email",
                                     "role",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -310,7 +313,8 @@
                                     "email",
                                     "role",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -483,7 +487,8 @@
                                     "email",
                                     "role",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -559,7 +564,8 @@
                                     "email",
                                     "role",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -712,7 +718,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -891,7 +898,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -973,7 +981,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1043,7 +1052,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1188,7 +1198,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1420,7 +1431,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1534,7 +1546,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1651,7 +1664,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1771,7 +1785,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -1883,7 +1898,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -2013,7 +2029,8 @@
                                     "available_copies",
                                     "is_rented_by_current_user",
                                     "created_at",
-                                    "updated_at"
+                                    "updated_at",
+                                    "deleted_at"
                                 ]
                             }
                         },
@@ -2227,6 +2244,13 @@
                                 "format": "date-time"
                             },
                             "updated_at": {
+                                "type": [
+                                    "string",
+                                    "null"
+                                ],
+                                "format": "date-time"
+                            },
+                            "deleted_at": {
                                 "type": [
                                     "string",
                                     "null"
@@ -2522,6 +2546,13 @@
                                 "format": "date-time"
                             },
                             "updated_at": {
+                                "type": [
+                                    "string",
+                                    "null"
+                                ],
+                                "format": "date-time"
+                            },
+                            "deleted_at": {
                                 "type": [
                                     "string",
                                     "null"
